# zenith

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
app/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
app/src/: App.tsx  camm-devnet.json  devnet.json  dlmm-devnet.json  index.css  main.tsx  polyfills.ts
app/src/components/: DepthChart.tsx  LiquidityArc.tsx  Logo.tsx  Nav.tsx  ThemeToggle.tsx  Toaster.tsx  WalletButton.tsx
app/src/components/ui/: button.tsx  card.tsx
app/src/lib/: camm.ts  cammCreate.ts  config.ts  dlmm.ts  errors.ts  liquidity.ts  market.ts  mock.ts  palette.ts  sdk.tsx  swap.ts  theme.tsx  toast.tsx  tokens.ts  useBalance.ts  usePoolConfig.ts  usePools.ts  usePositions.ts  useTokenBalance.ts  utils.ts
app/src/providers/: SolanaProviders.tsx
app/src/screens/: Camm.tsx  CreatePool.tsx  Dlmm.tsx  Landing.tsx  Pools.tsx  Positions.tsx  Swap.tsx
crates/zenith-math/: Cargo.toml
crates/zenith-math/src/: bin_price.rs  constant_product.rs  lib.rs  q64.rs  sqrt_price.rs  tick.rs  u256.rs
crates/zenith-math/tests/: cp_vectors_gen.rs  tick_vectors_gen.rs  vectors.rs
programs/zenith-amm/: Cargo.toml
programs/zenith-amm/src/: constants.rs  errors.rs  events.rs  lib.rs  math.rs  pda.rs
programs/zenith-amm/src/instructions/: claim_partner_fee.rs  claim_position_fee.rs  claim_protocol_fee.rs  close_position.rs  create_config.rs  create_position.rs  init_tick_array.rs  initialize_pool.rs  mod.rs  modify_liquidity.rs  set_position_compounding.rs  swap.rs
programs/zenith-amm/src/state/: config.rs  mod.rs  pool.rs  position.rs  tick.rs
programs/zenith-amm/tests/: fee_engine_vectors.rs  golden_account_bytes.rs  golden_math_vectors.rs
programs/zenith-camm/: Cargo.toml
programs/zenith-camm/src/: constants.rs  errors.rs  events.rs  fee.rs  lib.rs  pda.rs  yield_math.rs
programs/zenith-camm/src/instructions/: add_liquidity.rs  initialize_pool.rs  mod.rs  remove_liquidity.rs  swap.rs  yield_vault.rs
programs/zenith-camm/src/state/: mod.rs  pool.rs
programs/zenith-dlmm/: Cargo.toml
programs/zenith-dlmm/src/: constants.rs  errors.rs  events.rs  fee.rs  lib.rs  pda.rs  share_math.rs  strategy.rs  swap_math.rs
programs/zenith-dlmm/src/instructions/: add_liquidity.rs  claim_fee.rs  claim_protocol_fee.rs  close_position.rs  initialize_bin_array.rs  initialize_lb_pair.rs  initialize_oracle.rs  initialize_position.rs  mod.rs  remove_liquidity.rs  swap.rs
programs/zenith-dlmm/src/state/: bin_array.rs  lb_pair.rs  mod.rs  oracle.rs  position.rs
programs/zenith-dlmm/tests/: fee_vectors.rs  golden_account_bytes.rs  golden_quote_vectors.rs
scripts/dlmm-seed/: Cargo.toml
scripts/dlmm-seed/src/: main.rs
sdk/: package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts  vitest.localnet.config.ts
sdk/idl/: zenith_amm.json
sdk/localnet/: parity.test.ts
sdk/scripts/: camm-create-check.ts  camm-lp-check.ts  camm-seed.ts  camm-swap-check.ts  camm-yield-check.ts  claim-check.ts  dlmm-claim-check.ts  dlmm-lp-check.ts  dlmm-swap-check.ts  lp-check.ts  mint-all.ts  mint-to.ts  seed-devnet.ts  set-token-metadata.ts  swap-check.ts
sdk/src/: connection.ts  constants.ts  idl.ts  index.ts  pda.ts  quote.ts  tx.ts
sdk/src/camm/: accounts.ts  constants.ts  fetch.ts  index.ts  instructions.ts  math.ts  pda.ts  quote.ts
sdk/src/coder/: accounts.ts  fetch.ts  index.ts  reader.ts
sdk/src/dlmm/: accounts.ts  constants.ts  fetch.ts  index.ts  instructions.ts  math.ts  pda.ts  quote.ts
sdk/src/instructions/: builders.ts  encode.ts
sdk/src/math/: fee.ts  index.ts  pow.ts  q64.ts  rounding.ts  sqrtPrice.ts  swap.ts  u256.ts
sdk/test/: camm.test.ts  coder.test.ts  dlmm-builders.test.ts  dlmm-quote.test.ts  dlmm.test.ts  math.test.ts  math_units.test.ts  pda.test.ts  quote.test.ts  tx.test.ts
sdk/test/fixtures/: cp_math_vectors.json  dlmm_math_vectors.json  math_vectors.json  tick_math_vectors.json
tests/amm-integration/: Cargo.toml
tests/amm-integration/src/: lib.rs
tests/amm-integration/tests/: lifecycle.rs
tests/dlmm-integration/: Cargo.toml
tests/dlmm-integration/tests/: lifecycle.rs
