[workspace]
resolver = "2"
members = [
    "programs/zenith-amm",
    "programs/zenith-dlmm",
    "crates/zenith-math",
    "tests/amm-integration",
    "tests/dlmm-integration",
    "scripts/dlmm-seed",
]
# dlmm-seed pulls the heavy solana-client RPC stack; keep it out of the default
# build/test path (run it explicitly with `cargo run -p dlmm-seed`).
default-members = [
    "programs/zenith-amm",
    "programs/zenith-dlmm",
    "crates/zenith-math",
    "tests/amm-integration",
    "tests/dlmm-integration",
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
