[package]
name = "zenith-math"
version = "0.1.0"
edition = "2021"
description = "Shared fixed-point math for Zenith (Q64.64, U256, mul-div rounding)."
license = "MIT"

[lib]
crate-type = ["lib"]

# Pinned below 1.18: ruint 1.18 raised its MSRV to rustc 1.90, but the Solana
# BPF toolchain (platform-tools) ships rustc 1.89, so the program would not
# build for its target. 1.17 keeps a BPF-compatible MSRV.
[dependencies]
ruint = { version = "=1.17.0", default-features = false }

[dev-dependencies]
proptest = "1"
